# MiaoGent

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  wx_email.ps1
.github/workflows/: ci.yml  release-windows.yml
docs/: architecture.md  learning-notes.md  structure-review.md
packaging/: qq_mail_agent_sidecar.spec
platform/: README.md
platform/cli/: README.md  start.ps1
platform/pc/: README.md  start.ps1
platform/tauri/: README.md  package-lock.json  package.json
platform/tauri/src-tauri/: Cargo.toml  tauri.bundle.conf.json  tauri.conf.json
platform/tauri/src-tauri/binaries/: README.md
platform/tauri/src-tauri/capabilities/: default.json
platform/tauri/src-tauri/icons/: icon.icns
platform/tauri/src-tauri/nsis/: installer-hooks.nsh
platform/tauri/src-tauri/src/: desktop_config.rs  lib.rs  main.rs  notifications.rs  sidecar.rs
platform/tauri/web/: index.html  package-lock.json  package.json
platform/tauri/web/src/: App.test.tsx  App.tsx  api.ts  index.css  mailPrivacy.ts  types.ts
platform/tauri/web/src/components/: DesktopSettings.test.tsx  DesktopSettings.tsx  Dialogs.tsx  InspectionReport.tsx  StartupSummary.test.tsx  StartupSummary.tsx  ui.tsx
scripts/: build-desktop.ps1  build-sidecar.ps1  generate-updater-json.ps1
src/qq_mail_agent_cli/: __init__.py  __main__.py  agent.py  config.py  desktop_events.py  desktop_worker.py  health.py  interactive.py  llm_client.py  mail_client.py  main.py  models.py  privacy.py  storage.py  web_schemas.py  web_server.py
src/qq_mail_agent_cli/services/: __init__.py  draft_service.py  imap_idle_watcher.py  inspection_service.py  mail_sync_service.py
tests/: test_cli.py  test_desktop_backend.py  test_web_api.py
web/: package-lock.json  package.json  tailwind.config.ts  vite.config.ts
web/src/: App.test.tsx  App.tsx
web/src/components/: DesktopSettings.test.tsx  DesktopSettings.tsx  DraftWorkspace.tsx  StartupSummary.test.tsx  StartupSummary.tsx  ui.tsx
web/src/hooks/: useDialogFocus.ts
web/src/test/: setup.ts
(+3 files in other folders)
